# CaMelShot

./: README.md  build.gradle  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: best.ncnn.param
app/src/main/java/com/SSRL/CaMelShot/: CamActivity.java  DetectEdge.java  GpsTracker.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt  yolov5ncnn_jni.cpp
app/src/main/jni/OpenCV/: pca_detect.cpp
app/src/main/jni/arm64-v8a/include/ncnn/: platform.h
app/src/main/jni/arm64-v8a/lib/cmake/ncnn/: ncnn.cmake
app/src/main/jni/x86_64/include/ncnn/: platform.h
app/src/main/res/drawable/: background_rect.xml
app/src/main/res/layout/: activity_camera.xml  main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
sdk/java/src/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
sdk/java/src/org/opencv/core/: Mat.java
sdk/libcxx_helper/: CMakeLists.txt
